update ingest of the work programmes

--- a/Horizon Work Programmes/ingesta.ipynb
+++ b/Horizon Work Programmes/ingesta.ipynb
@@ -15,7 +15,8 @@
    "execution_count": 1,
    "id": "8b8ede8d",
    "metadata": {
-    "id": "8b8ede8d"
+    "id": "8b8ede8d",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -29,7 +30,8 @@
    "execution_count": 2,
    "id": "DL76-WMy0orv",
    "metadata": {
-    "id": "DL76-WMy0orv"
+    "id": "DL76-WMy0orv",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -61,10 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "id": "pV4gJe_y2YIJ",
    "metadata": {
-    "id": "pV4gJe_y2YIJ"
+    "id": "pV4gJe_y2YIJ",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -121,10 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "id": "AIiM45gm58e0",
    "metadata": {
-    "id": "AIiM45gm58e0"
+    "id": "AIiM45gm58e0",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -280,10 +284,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 15,
    "id": "ba34111a",
    "metadata": {
-    "id": "ba34111a"
+    "id": "ba34111a",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -292,14 +297,14 @@
     "# path = \"/Users/mbalairon/Desktop/Horizon/\"\n",
     "path = \"pdf documents/\"\n",
     "\n",
-    "program = \"health\"\n",
-    "# program = \"culture\"\n",
+    "#programme = \"health\"\n",
+    "#program = \"culture\"\n",
     "# program = \"security\"\n",
     "# program = \"digital\"\n",
     "# program = \"climate\"\n",
     "# program = \"food\"\n",
     "\n",
-    "programs = [\"health\", \"culture\", \"security\", \"digital\", \"climate\", \"food\"]\n",
+    "programs = [\"health\", \"culture\", \"security\", \"digital\", \"climate\", \"food\", \"cca\"]\n",
     "\n",
     "# Get hyperparameters related with each of the kinds of texts at the doc\n",
     "subtitle_size = 12.0\n",
@@ -310,236 +315,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "d38385fb",
    "metadata": {
-    "id": "d38385fb"
+    "id": "d38385fb",
+    "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Work Programme</th>\n",
-       "      <th>Call</th>\n",
-       "      <th>Budget</th>\n",
-       "      <th>Type of Action</th>\n",
-       "      <th>Expected Outcome</th>\n",
-       "      <th>Scope</th>\n",
-       "      <th>Title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>food</td>\n",
-       "      <td>HORIZON-CL6-2023-BIODIV-01-1</td>\n",
-       "      <td>around EUR 5.50 million</td>\n",
-       "      <td>Research and Innovation Actions</td>\n",
-       "      <td>In line with the European Green Deal and in pa...</td>\n",
-       "      <td>According to IPBES global assessment report, p...</td>\n",
-       "      <td>Better understanding of routes of exposure and...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>food</td>\n",
-       "      <td>HORIZON-CL6-2023-BIODIV-01-2</td>\n",
-       "      <td>around EUR 3.50 million</td>\n",
-       "      <td>Research and Innovation Actions</td>\n",
-       "      <td>In line with the European Green Deal and in pa...</td>\n",
-       "      <td>Scope:Light pollutionis the alteration of natu...</td>\n",
-       "      <td>Impact of light and noise pollution on biodive...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>food</td>\n",
-       "      <td>HORIZON-CL6-2023-BIODIV-01-3</td>\n",
-       "      <td>around EUR 6.00 million</td>\n",
-       "      <td>Research and Innovation Actions</td>\n",
-       "      <td>The expected outcomes should feed in the imple...</td>\n",
-       "      <td>Scope:These activities will foster a collecti...</td>\n",
-       "      <td>Interdisciplinary assessment of changes affect...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>food</td>\n",
-       "      <td>HORIZON-CL6-2023-BIODIV-01-4</td>\n",
-       "      <td>around EUR 4.00 million</td>\n",
-       "      <td>Research and Innovation Actions</td>\n",
-       "      <td>In line with the objectives of the European Gr...</td>\n",
-       "      <td>Proposals should address Area A or Area B as f...</td>\n",
-       "      <td>Nature protection</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>food</td>\n",
-       "      <td>HORIZON-CL6-2023-BIODIV-01-5</td>\n",
-       "      <td>around EUR 9.00 million</td>\n",
-       "      <td>Research and Innovation Actions</td>\n",
-       "      <td>In line with the European Green Deal and in pa...</td>\n",
-       "      <td>Proposals should work in one or more European ...</td>\n",
-       "      <td>Understanding and reducing bycatch of protecte...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171</th>\n",
-       "      <td>food</td>\n",
-       "      <td>HORIZON-CL6-2024-GOVERNANCE-01-9</td>\n",
-       "      <td>around EUR 3.00 million</td>\n",
-       "      <td>Coordination and Support Actions</td>\n",
-       "      <td>In support of the European Green Deal, the EU ...</td>\n",
-       "      <td>Proposals should address the following activit...</td>\n",
-       "      <td>Thematic networks to compile and share knowled...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>172</th>\n",
-       "      <td>food</td>\n",
-       "      <td>HORIZON-CL6-2024-GOVERNANCE-01-10</td>\n",
-       "      <td>around EUR 4.00 million</td>\n",
-       "      <td>Coordination and Support Actions</td>\n",
-       "      <td>Successful proposals will support the objectiv...</td>\n",
-       "      <td>Transformative changes, such as the ones calle...</td>\n",
-       "      <td>Organic farming thematic networks to compile a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>173</th>\n",
-       "      <td>food</td>\n",
-       "      <td>HORIZON-CL6-2024-GOVERNANCE-01-11</td>\n",
-       "      <td>around EUR 3.00 million</td>\n",
-       "      <td>Coordination and Support Actions</td>\n",
-       "      <td>In support of the European Green Deal, the EU ...</td>\n",
-       "      <td>Proposals should address the following activit...</td>\n",
-       "      <td>Biodiversity thematic networks to compile and ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>174</th>\n",
-       "      <td>food</td>\n",
-       "      <td>HORIZON-CL6-2024-GOVERNANCE-01-12</td>\n",
-       "      <td>around EUR 4.00 million</td>\n",
-       "      <td>Coordination and Support Actions</td>\n",
-       "      <td>In support of the European Green Deal, the EU ...</td>\n",
-       "      <td>Proposals should address the following activit...</td>\n",
-       "      <td>Developing EU advisory networks on forestry</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>175</th>\n",
-       "      <td>food</td>\n",
-       "      <td>HORIZON-CL6-2024-GOVERNANCE-01-13</td>\n",
-       "      <td>around EUR 4.00 million</td>\n",
-       "      <td>Coordination and Support Actions</td>\n",
-       "      <td>In support of the European Green Deal, organic...</td>\n",
-       "      <td>Proposals should address the following activit...</td>\n",
-       "      <td>Developing EU advisory networks on sustainable...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>176 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Work Programme                               Call  \\\n",
-       "0             food       HORIZON-CL6-2023-BIODIV-01-1   \n",
-       "1             food       HORIZON-CL6-2023-BIODIV-01-2   \n",
-       "2             food       HORIZON-CL6-2023-BIODIV-01-3   \n",
-       "3             food       HORIZON-CL6-2023-BIODIV-01-4   \n",
-       "4             food       HORIZON-CL6-2023-BIODIV-01-5   \n",
-       "..             ...                                ...   \n",
-       "171           food   HORIZON-CL6-2024-GOVERNANCE-01-9   \n",
-       "172           food  HORIZON-CL6-2024-GOVERNANCE-01-10   \n",
-       "173           food  HORIZON-CL6-2024-GOVERNANCE-01-11   \n",
-       "174           food  HORIZON-CL6-2024-GOVERNANCE-01-12   \n",
-       "175           food  HORIZON-CL6-2024-GOVERNANCE-01-13   \n",
-       "\n",
-       "                      Budget                    Type of Action  \\\n",
-       "0    around EUR 5.50 million   Research and Innovation Actions   \n",
-       "1    around EUR 3.50 million   Research and Innovation Actions   \n",
-       "2    around EUR 6.00 million   Research and Innovation Actions   \n",
-       "3    around EUR 4.00 million   Research and Innovation Actions   \n",
-       "4    around EUR 9.00 million   Research and Innovation Actions   \n",
-       "..                       ...                               ...   \n",
-       "171  around EUR 3.00 million  Coordination and Support Actions   \n",
-       "172  around EUR 4.00 million  Coordination and Support Actions   \n",
-       "173  around EUR 3.00 million  Coordination and Support Actions   \n",
-       "174  around EUR 4.00 million  Coordination and Support Actions   \n",
-       "175  around EUR 4.00 million  Coordination and Support Actions   \n",
-       "\n",
-       "                                      Expected Outcome  \\\n",
-       "0    In line with the European Green Deal and in pa...   \n",
-       "1    In line with the European Green Deal and in pa...   \n",
-       "2    The expected outcomes should feed in the imple...   \n",
-       "3    In line with the objectives of the European Gr...   \n",
-       "4    In line with the European Green Deal and in pa...   \n",
-       "..                                                 ...   \n",
-       "171  In support of the European Green Deal, the EU ...   \n",
-       "172  Successful proposals will support the objectiv...   \n",
-       "173  In support of the European Green Deal, the EU ...   \n",
-       "174  In support of the European Green Deal, the EU ...   \n",
-       "175  In support of the European Green Deal, organic...   \n",
-       "\n",
-       "                                                 Scope  \\\n",
-       "0    According to IPBES global assessment report, p...   \n",
-       "1    Scope:Light pollutionis the alteration of natu...   \n",
-       "2    Scope:These activities will foster a collecti...   \n",
-       "3    Proposals should address Area A or Area B as f...   \n",
-       "4    Proposals should work in one or more European ...   \n",
-       "..                                                 ...   \n",
-       "171  Proposals should address the following activit...   \n",
-       "172  Transformative changes, such as the ones calle...   \n",
-       "173  Proposals should address the following activit...   \n",
-       "174  Proposals should address the following activit...   \n",
-       "175  Proposals should address the following activit...   \n",
-       "\n",
-       "                                                 Title  \n",
-       "0    Better understanding of routes of exposure and...  \n",
-       "1    Impact of light and noise pollution on biodive...  \n",
-       "2    Interdisciplinary assessment of changes affect...  \n",
-       "3                                    Nature protection  \n",
-       "4    Understanding and reducing bycatch of protecte...  \n",
-       "..                                                 ...  \n",
-       "171  Thematic networks to compile and share knowled...  \n",
-       "172  Organic farming thematic networks to compile a...  \n",
-       "173  Biodiversity thematic networks to compile and ...  \n",
-       "174       Developing EU advisory networks on forestry   \n",
-       "175  Developing EU advisory networks on sustainable...  \n",
-       "\n",
-       "[176 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "if LOOP:\n",
     "    df = pd.DataFrame()\n",
-    "    prgrams = [\"health\"]\n",
     "    for programme in programs:\n",
     "        # Open the document\n",
     "        doc = fitz.open(path+programme+\".pdf\")\n",
@@ -557,10 +342,10 @@
     "        \n",
     "\n",
     "        # Store the df as a csv document\n",
-    "        df.to_parquet(\"horizon_work_programmes.parquet\", index=False)\n",
+    "        #df.to_parquet(\"horizon_work_programmes.parquet\", index=False)\n",
     "        \n",
     "else:\n",
-    "    programme = programs[1]\n",
+    "    #programme = programs[1]\n",
     "    # Open the document\n",
     "    doc = fitz.open(path+programme+\".pdf\")\n",
     "\n",
@@ -575,8 +360,83 @@
     "    \n",
     "    # Store the df as a csv document\n",
     "    # df_call.to_parquet(programme+\".parquet\", index=False)\n",
-    "\n",
-    "df_call  "
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ba45126e-cd56-49dc-96ac-85ce8027a802",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_version_anterior = pd.read_parquet('/export/data_ml4ds/AI4U/Datasets/work_programmes/20231001/horizon_work_programmes.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f2732977-c2ff-47d6-8981-fac533597d68",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df.to_parquet('/export/data_ml4ds/AI4U/Datasets/work_programmes/20240510/horizon_work_programmes.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6889bb4e-cd9d-40d5-b9b8-84c2b5951eb7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of calls in October 2023 version: 659\n",
+      "Number of calls in May 2024 version: 758\n",
+      "\n",
+      "Number of calls of cluster health in October 2023 version: 44\n",
+      "Number of calls of cluster health in May 2024 version: 48\n",
+      "\n",
+      "Number of calls of cluster culture in October 2023 version: 56\n",
+      "Number of calls of cluster culture in May 2024 version: 61\n",
+      "\n",
+      "Number of calls of cluster security in October 2023 version: 48\n",
+      "Number of calls of cluster security in May 2024 version: 48\n",
+      "\n",
+      "Number of calls of cluster digital in October 2023 version: 144\n",
+      "Number of calls of cluster digital in May 2024 version: 152\n",
+      "\n",
+      "Number of calls of cluster climate in October 2023 version: 191\n",
+      "Number of calls of cluster climate in May 2024 version: 193\n",
+      "\n",
+      "Number of calls of cluster food in October 2023 version: 176\n",
+      "Number of calls of cluster food in May 2024 version: 181\n",
+      "\n",
+      "Number of calls of cluster cca in October 2023 version: 0\n",
+      "Number of calls of cluster cca in May 2024 version: 75\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Number of calls in October 2023 version:', df_version_anterior.shape[0])\n",
+    "print('Number of calls in May 2024 version:', df.shape[0])\n",
+    "print()\n",
+    "    \n",
+    "for programme in programs:\n",
+    "    print('Number of calls of cluster', programme, 'in October 2023 version:', df_version_anterior[df_version_anterior['Work Programme']==programme].shape[0])\n",
+    "    print('Number of calls of cluster', programme, 'in May 2024 version:', df[df['Work Programme']==programme].shape[0])\n",
+    "    print()\n",
+    "    \n",
+    "    "
    ]
   }
  ],
@@ -599,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
