matching de AEI completed

--- a/match_semanticScholar_researchPortal/cordis/match_projects_CORDIS.ipynb
+++ b/match_semanticScholar_researchPortal/cordis/match_projects_CORDIS.ipynb
@@ -295,7 +295,7 @@
    "outputs": [],
    "source": [
     "# 3 DEFINIR LA FUNCION PARA MATCHEAR YA QUE EL PROJECT_ID (CORDIS) SUELE ESTAR METIDO EN LA REFERENCE (RP)\n",
-    "def match_pandas(df_researchPortal_projects, project_ids, df_cordis_projects_pd_uc3m):\n",
+    "def match_df_con_lista(df_researchPortal_projects, project_ids, df_cordis_projects_pd_uc3m):\n",
     "    \n",
     "    # Crear una lista para almacenar las filas coincidentes\n",
     "    matched_rows = []\n",
@@ -530,7 +530,7 @@
    ],
    "source": [
     "# 4 APLICAR FUNCION Y VER QUE 250 DE 257 LOS TENEMOS EN RP)\n",
-    "df_matched_uc3m_pd = match_pandas(df_researchPortal_projects_pd, project_ids, df_cordis_projects_pd_uc3m)\n",
+    "df_matched_uc3m_pd = match_df_con_lista(df_researchPortal_projects_pd, project_ids, df_cordis_projects_pd_uc3m)\n",
     "df_matched_uc3m_pd.to_csv('df_matched_uc3m.csv', index=False) \n",
     "df_matched_uc3m_pd # 252"
    ]
@@ -555,7 +555,11 @@
    "cell_type": "code",
    "execution_count": 55,
    "id": "06613b69-2fe3-43cc-8d44-51582be0283e",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# 1 DEFINIR FUNCIONES PARA NORMALIZAR TITULOS Y HACER MATCHING\n",
