--- a/AEI/ingesta.ipynb
+++ b/AEI/ingesta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "896e8533-dacf-405e-b01a-9f796ecd1184",
    "metadata": {
     "tags": []
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "cd670660-61a4-4ee6-b873-2b7ad51d65f6",
    "metadata": {
     "tags": []
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "b2490743-b542-4e73-96f8-d71bebd5343a",
    "metadata": {
     "tags": []
@@ -130,9 +130,9 @@
       "De las 5968 entradas de 2017, 2604 no tienen resumen.\n",
       "De las 7461 entradas de 2018, 3423 no tienen resumen.\n",
       "De las 6377 entradas de 2019, 2403 no tienen resumen.\n",
-      "De las 5996 entradas de 2020, 2517 no tienen resumen.\n",
-      "De las 8682 entradas de 2021, 2743 no tienen resumen.\n",
-      "De las 8392 entradas de 2022, 3715 no tienen resumen.\n",
+      "De las 5993 entradas de 2020, 2517 no tienen resumen.\n",
+      "De las 8668 entradas de 2021, 2743 no tienen resumen.\n",
+      "De las 8614 entradas de 2022, 3951 no tienen resumen.\n",
       "De las 292 entradas de 2023, 0 no tienen resumen.\n"
      ]
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "id": "f424ac15-42be-4e7b-bcf3-c082f697ab3b",
    "metadata": {
     "tags": []
@@ -160,7 +160,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
+   "id": "8e1c5242-d40f-4d0b-84d1-0a18614e9a59",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns={'€ Conced.': 'presupuesto_concedido'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "473e940f-d93b-452b-8be2-f382db738cf8",
    "metadata": {
     "tags": []
@@ -198,7 +210,7 @@
        "      <th>Entidad</th>\n",
        "      <th>CC.AA.</th>\n",
        "      <th>Provincia</th>\n",
-       "      <th>€ Conced.</th>\n",
+       "      <th>presupuesto_concedido</th>\n",
        "      <th>Resumen</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -302,15 +314,15 @@
        "3  FUNDACION PARA LA INVESTIGACION BIOMEDICA DEL ...        MADRID    MADRID   \n",
        "4  FUNDACIÓN DE LA COMUNIDAD VALENCIANA CENTRO DE...  C.VALENCIANA  VALENCIA   \n",
        "\n",
-       "      € Conced. Resumen  \n",
-       "0  1.144.400,00     NaN  \n",
-       "1    184.000,00     NaN  \n",
-       "2    186.000,00     NaN  \n",
-       "3    224.000,00     NaN  \n",
-       "4    927.000,00     NaN  "
+       "  presupuesto_concedido Resumen  \n",
+       "0          1.144.400,00     NaN  \n",
+       "1            184.000,00     NaN  \n",
+       "2            186.000,00     NaN  \n",
+       "3            224.000,00     NaN  \n",
+       "4            927.000,00     NaN  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,14 +333,356 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "id": "23fc59de-a33b-4925-9e4e-409bfe86a762",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df.to_parquet('/export/usuarios_ml4ds/mbalairon/github/data_ingest/AEI/output/datos_aei.csv', index=False)"
+    "df.to_parquet('/export/usuarios_ml4ds/mbalairon/github/data_ingest/AEI/output/datos_aei.parquet', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a4e32de8-adee-4e72-a5a3-700addd2da8a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df.to_parquet('/export/data_ml4ds/AI4U/Datasets/AEI/20240321/datos_aei.parquet', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "81911b67-68da-483f-97c1-f3b696c73dd5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Año</th>\n",
+       "      <th>Convocatoria</th>\n",
+       "      <th>Referencia</th>\n",
+       "      <th>Género</th>\n",
+       "      <th>Área</th>\n",
+       "      <th>Subárea</th>\n",
+       "      <th>Título</th>\n",
+       "      <th>C.I.F.</th>\n",
+       "      <th>Entidad</th>\n",
+       "      <th>CC.AA.</th>\n",
+       "      <th>Provincia</th>\n",
+       "      <th>presupuesto_concedido</th>\n",
+       "      <th>Resumen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>CONSOLIDER</td>\n",
+       "      <td>CSD2008-00007</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q2818029G</td>\n",
+       "      <td>UNIVERSIDAD CARLOS III DE MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>1.336.832,56</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>CONSOLIDER</td>\n",
+       "      <td>CSD2008-00007</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q2818029G</td>\n",
+       "      <td>UNIVERSIDAD CARLOS III DE MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>3.500.000,00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>CONSOLIDER</td>\n",
+       "      <td>CSD2008-00010</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q2818029G</td>\n",
+       "      <td>UNIVERSIDAD CARLOS III DE MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>511.200,00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>CONSOLIDER</td>\n",
+       "      <td>CSD2008-00077</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q2818029G</td>\n",
+       "      <td>UNIVERSIDAD CARLOS III DE MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>6.128,16</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>320</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>Ramón y Cajal</td>\n",
+       "      <td>RYC-2008-03371</td>\n",
+       "      <td>HOMBRE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Contratacion multipartidaria, toma de decision...</td>\n",
+       "      <td>Q2818029G</td>\n",
+       "      <td>UNIVERSIDAD CARLOS III DE MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>192.480,00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8559</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Juan de la Cierva</td>\n",
+       "      <td>JDC2022-050288-I</td>\n",
+       "      <td>HOMBRE</td>\n",
+       "      <td>Ciencias y tecnologías de materiales</td>\n",
+       "      <td>Materiales para la energía y el medioambiente</td>\n",
+       "      <td>High-Entropy Ceramics based on Laminate Metal ...</td>\n",
+       "      <td>Q2818029G</td>\n",
+       "      <td>UNIVERSIDAD CARLOS III DE MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>67.400,00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Proyectos de Colaboración Internacional</td>\n",
+       "      <td>PCI2023-143425</td>\n",
+       "      <td>HOMBRE</td>\n",
+       "      <td>Energía y transporte</td>\n",
+       "      <td>Transporte</td>\n",
+       "      <td>INTELLIGENT, SAFE AND SECURE CONNECTED ELECTRI...</td>\n",
+       "      <td>Q2818029G</td>\n",
+       "      <td>UNIVERSIDAD CARLOS III DE MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>216.590,00</td>\n",
+       "      <td>ECOMOBILITY APOYARA A LA INDUSTRIA Y LAS CIUDA...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Ayudas ATRAE para la incorporación de talento ...</td>\n",
+       "      <td>ATR2023-145754</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tecnologías de la información y de las comunic...</td>\n",
+       "      <td>Ciencias de la computación y tecnología inform...</td>\n",
+       "      <td>DESENTRAÑAR LAS REDES NEURONALES PROFUNDAS GEN...</td>\n",
+       "      <td>Q2818029G</td>\n",
+       "      <td>UNIVERSIDAD CARLOS III DE MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>971.575,00</td>\n",
+       "      <td>EN UGAI, NOS CENTRAREMOS EN CONTROLAR MODELOS ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Ayudas ATRAE para la incorporación de talento ...</td>\n",
+       "      <td>ATR2023-145734</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Economía</td>\n",
+       "      <td>Economía, métodos y aplicaciones</td>\n",
+       "      <td>REASIGNACION LABORAL POR UN FUTURO SOSTENIBLE ...</td>\n",
+       "      <td>Q2818029G</td>\n",
+       "      <td>UNIVERSIDAD CARLOS III DE MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>777.325,00</td>\n",
+       "      <td>LA APARICION DE NUEVAS TECNOLOGIAS, EL ENVEJEC...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Proyectos de Colaboración Internacional</td>\n",
+       "      <td>PCI2023-145990-2</td>\n",
+       "      <td>MUJER</td>\n",
+       "      <td>Tecnologías de la información y de las comunic...</td>\n",
+       "      <td>Tecnologías de las comunicaciones</td>\n",
+       "      <td>PHYSICS-BASED WIRELESS AI PROVIDING SCALABILIT...</td>\n",
+       "      <td>Q2818029G</td>\n",
+       "      <td>UNIVERSIDAD CARLOS III DE MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>193.600,00</td>\n",
+       "      <td>LAS COMUNICACIONES MOVILES HAN CAMBIADO Y SEGU...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1509 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Año                                       Convocatoria  \\\n",
+       "24    2008                                         CONSOLIDER   \n",
+       "35    2008                                         CONSOLIDER   \n",
+       "57    2008                                         CONSOLIDER   \n",
+       "79    2008                                         CONSOLIDER   \n",
+       "320   2008                                      Ramón y Cajal   \n",
+       "...    ...                                                ...   \n",
+       "8559  2022                                  Juan de la Cierva   \n",
+       "38    2023            Proyectos de Colaboración Internacional   \n",
+       "103   2023  Ayudas ATRAE para la incorporación de talento ...   \n",
+       "110   2023  Ayudas ATRAE para la incorporación de talento ...   \n",
+       "181   2023            Proyectos de Colaboración Internacional   \n",
+       "\n",
+       "            Referencia  Género  \\\n",
+       "24       CSD2008-00007     NaN   \n",
+       "35       CSD2008-00007     NaN   \n",
+       "57       CSD2008-00010     NaN   \n",
+       "79       CSD2008-00077     NaN   \n",
+       "320     RYC-2008-03371  HOMBRE   \n",
+       "...                ...     ...   \n",
+       "8559  JDC2022-050288-I  HOMBRE   \n",
+       "38      PCI2023-143425  HOMBRE   \n",
+       "103     ATR2023-145754     NaN   \n",
+       "110     ATR2023-145734     NaN   \n",
+       "181   PCI2023-145990-2   MUJER   \n",
+       "\n",
+       "                                                   Área  \\\n",
+       "24                                                  NaN   \n",
+       "35                                                  NaN   \n",
+       "57                                                  NaN   \n",
+       "79                                                  NaN   \n",
+       "320                                                 NaN   \n",
+       "...                                                 ...   \n",
+       "8559               Ciencias y tecnologías de materiales   \n",
+       "38                                 Energía y transporte   \n",
+       "103   Tecnologías de la información y de las comunic...   \n",
+       "110                                            Economía   \n",
+       "181   Tecnologías de la información y de las comunic...   \n",
+       "\n",
+       "                                                Subárea  \\\n",
+       "24                                                  NaN   \n",
+       "35                                                  NaN   \n",
+       "57                                                  NaN   \n",
+       "79                                                  NaN   \n",
+       "320                                                 NaN   \n",
+       "...                                                 ...   \n",
+       "8559      Materiales para la energía y el medioambiente   \n",
+       "38                                           Transporte   \n",
+       "103   Ciencias de la computación y tecnología inform...   \n",
+       "110                    Economía, métodos y aplicaciones   \n",
+       "181                   Tecnologías de las comunicaciones   \n",
+       "\n",
+       "                                                 Título     C.I.F.  \\\n",
+       "24                                                  NaN  Q2818029G   \n",
+       "35                                                  NaN  Q2818029G   \n",
+       "57                                                  NaN  Q2818029G   \n",
+       "79                                                  NaN  Q2818029G   \n",
+       "320   Contratacion multipartidaria, toma de decision...  Q2818029G   \n",
+       "...                                                 ...        ...   \n",
+       "8559  High-Entropy Ceramics based on Laminate Metal ...  Q2818029G   \n",
+       "38    INTELLIGENT, SAFE AND SECURE CONNECTED ELECTRI...  Q2818029G   \n",
+       "103   DESENTRAÑAR LAS REDES NEURONALES PROFUNDAS GEN...  Q2818029G   \n",
+       "110   REASIGNACION LABORAL POR UN FUTURO SOSTENIBLE ...  Q2818029G   \n",
+       "181   PHYSICS-BASED WIRELESS AI PROVIDING SCALABILIT...  Q2818029G   \n",
+       "\n",
+       "                               Entidad  CC.AA. Provincia  \\\n",
+       "24    UNIVERSIDAD CARLOS III DE MADRID  MADRID    MADRID   \n",
+       "35    UNIVERSIDAD CARLOS III DE MADRID  MADRID    MADRID   \n",
+       "57    UNIVERSIDAD CARLOS III DE MADRID  MADRID    MADRID   \n",
+       "79    UNIVERSIDAD CARLOS III DE MADRID  MADRID    MADRID   \n",
+       "320   UNIVERSIDAD CARLOS III DE MADRID  MADRID    MADRID   \n",
+       "...                                ...     ...       ...   \n",
+       "8559  UNIVERSIDAD CARLOS III DE MADRID  MADRID    MADRID   \n",
+       "38    UNIVERSIDAD CARLOS III DE MADRID  MADRID    MADRID   \n",
+       "103   UNIVERSIDAD CARLOS III DE MADRID  MADRID    MADRID   \n",
+       "110   UNIVERSIDAD CARLOS III DE MADRID  MADRID    MADRID   \n",
+       "181   UNIVERSIDAD CARLOS III DE MADRID  MADRID    MADRID   \n",
+       "\n",
+       "     presupuesto_concedido                                            Resumen  \n",
+       "24            1.336.832,56                                                NaN  \n",
+       "35            3.500.000,00                                                NaN  \n",
+       "57              511.200,00                                                NaN  \n",
+       "79                6.128,16                                                NaN  \n",
+       "320             192.480,00                                                NaN  \n",
+       "...                    ...                                                ...  \n",
+       "8559             67.400,00                                                NaN  \n",
+       "38              216.590,00  ECOMOBILITY APOYARA A LA INDUSTRIA Y LAS CIUDA...  \n",
+       "103             971.575,00  EN UGAI, NOS CENTRAREMOS EN CONTROLAR MODELOS ...  \n",
+       "110             777.325,00  LA APARICION DE NUEVAS TECNOLOGIAS, EL ENVEJEC...  \n",
+       "181             193.600,00  LAS COMUNICACIONES MOVILES HAN CAMBIADO Y SEGU...  \n",
+       "\n",
+       "[1509 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Entidad']=='UNIVERSIDAD CARLOS III DE MADRID']"
    ]
   }
  ],
