resumenes añadidos al researchportal temporal

--- a/match_semanticScholar_researchPortal/cordis/match_projects_CORDIS.ipynb
+++ b/match_semanticScholar_researchPortal/cordis/match_projects_CORDIS.ipynb
@@ -2147,7 +2147,7 @@
     }
    ],
    "source": [
-    "# SE AÑADE LA COLUMNA OBJECTIVE: \n",
+    "# SE AÑADE LA COLUMNA OBJECTIVE  Y SE GUARDA\n",
     "matched_df_def = pd.merge(df_researchPortal_projects_pd, df_concatenado[['actID', 'objective', 'projectID']], on='actID', how='inner')\n",
     "\n",
     "matched_df_def.to_csv('outputs/CORDIS_conObjetivo.csv', index=False) \n",
