--- a/match_semanticScholar_researchPortal/cordis/match_projects_CORDIS.ipynb
+++ b/match_semanticScholar_researchPortal/cordis/match_projects_CORDIS.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "50771d6e-4868-49c1-936e-2825587600c3",
    "metadata": {},
    "outputs": [],
@@ -29,14 +29,16 @@
   {
    "cell_type": "markdown",
    "id": "872043b1-e2de-45af-83ee-da2d5cf4c80f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Define directorios y cargar parquets:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "79e8508b-db87-4912-8a7a-36523f3ff1b1",
    "metadata": {},
    "outputs": [],
@@ -48,10 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "cdb117c1-1ff9-4a13-b464-f939de51cb3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/05/15 12:23:43 WARN scheduler.TaskSchedulerImpl: Initial job has not accepted any resources; check your cluster UI to ensure that workers are registered and have sufficient resources\n",
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "version = '20240411'\n",
     "df_cordis_projects = spark.read.parquet(\"file:///export/data_ml4ds/AI4U/Datasets/cordis/{}/parquet/projects.parquet/\".format(version))\n",
@@ -61,10 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "7ea5cd0b-403c-4776-941a-dfa2386cd598",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -101,8 +119,28 @@
       " |    |-- element: string (containsNull = true)\n",
       " |-- patentID: array (nullable = true)\n",
       " |    |-- element: long (containsNull = true)\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 6:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Number of projects available: 5625\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -118,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "bbdda14f-e190-49a6-b56d-cd84cdffbcd7",
    "metadata": {},
    "outputs": [
@@ -126,6 +164,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "24/05/15 12:24:05 WARN util.package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
       "                                                                                \r"
      ]
     }
@@ -529,13 +568,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "06613b69-2fe3-43cc-8d44-51582be0283e",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 1 DEFINIR FUNCIONES PARA NORMALIZAR TITULOS Y HACER MATCHING\n",
@@ -722,7 +757,9 @@
   {
    "cell_type": "markdown",
    "id": "29e8a6c0-e5dc-484c-8fa4-c37830552505",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 3. Unir ambos cruces para sacar el maximo valor de correspondencias"
    ]
@@ -2173,7 +2210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
